# vacuum_cleaner

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  controller.xml  hardware.xml  package.xml
config/: controllers.yaml  diffbot_controllers.yaml  gazebo_params.yaml  joystick.yaml  nav2.yaml  presettings.rviz  slam_localization.yaml
controllers/: gpio_controller.cpp
controllers/include/: gpio_controller.hpp
description/: bumper_distance_sensors.xacro  gazebo.xacro  lidar.xacro  materials.xacro  range_sensors.xacro  raspberry_pi.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sweeper.xacro
description/mashes/: Bracket.stl
hardware/: arduino_com.cpp  bumper_distance.cpp  diffbot_system.cpp
hardware/Arduino/bumper_distance_sensor/: bumper_distance_sensor.ino
hardware/Arduino/motors/: motors.ino  pid.cpp  pid.h
hardware/Arduino/sensors/: sensors.ino
hardware/Arduino/setup_raspberry_pi_pico/: README.md
hardware/Arduino/wheel_control/: wheel_control.ino
hardware/include/: arduino_com.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
launch/: bumper_distance.py  dev.launch.py  navigation_launch.py  robot.launch.py  rplidar.launch.py  simulation.launch.py
maps/: Home1.data  Home1.pgm  Home1.yaml  Home_Area.pgm  my_map.data  my_map.pgm  my_map.yaml  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  office_map.data  office_map.pgm  office_map.posegraph  office_map.yaml
scripts/: bumper_distance.py  cleaning.py  drive_robot.py  path_planing.py
worlds/: home1.world  my_world.world
worlds/Home1/: Home1.stl  Home1.world  model.config  model.sdf
worlds/Home1/meshes/: Home1.dae
